--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -64,7 +64,7 @@
                 <div class="thumbnail">
                   <img src="/assets/thirteen.jpg" alt="Thirteen, the Musical">
                   <div class="caption">
-                    <h3>Thirteen the musical</h3>
+                    <h3>Thirteen: The Musical</h3>
                     <p><div class="button"><a data-toggle="modal" data-target="#thirteenModal" href="#">More Info</a></div></p>
                   </div>
                 </div>
@@ -101,14 +101,23 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">Thirteen The Musical</h4>
+        <h4 class="modal-title">WINTER AND SPRING PROGRAMME AGES 14-18</h4>
       </div>
       <div class="modal-body">
-        <p>One fine body&hellip;</p>
+        <img src="/assets/thirteen.jpg" alt="Thirteen" class="programme-info-image">
+        <p>Rehearse and perform the songs and story of the Broadway Musical ‘Thirteen’ </p>
+        <p>
+Sundays   10:00 A.M. until 2:00 P.M.<br>
+January 17- May 15<br>
+The Lower Ossington Theatre, 100 Ossington Ave.<br>
+Cost:  $500.00<br>
+Ages:  14-18 
+        </p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <div class="button">
+          <a href="https://tickets.ticketwise.ca/event/tyt-winter-spring-2016" target="_blank">Register Now</a>
+        </div>
       </div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
@@ -118,14 +127,23 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">Sweeney Todd</h4>
+        <h4 class="modal-title">WINTER AND SPRING PROGRAMME AGES 18-29</h4>
       </div>
       <div class="modal-body">
-        <p>One fine body&hellip;</p>
+        <img src="/assets/sweeneytodd.jpg" alt="Sweeney Todd" class="programme-info-image">
+        <p>Rehearse and perform the songs and story of ‘Sweeney Todd’ </p>
+        <p>
+Saturdays   10:00 A.M. until 2:00 P.M.<br>
+January 16- May 15<br>
+The Lower Ossington Theatre, 100 Ossington Ave.<br>
+Cost:  $500.00<br>
+Ages:  14-18 
+        </p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <div class="button">
+          <a href="https://tickets.ticketwise.ca/event/tyt-winter-spring-2016" target="_blank">Register Now</a>
+        </div>
       </div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
@@ -138,11 +156,20 @@
         <h4 class="modal-title">The Wizard of Oz / Wicked</h4>
       </div>
       <div class="modal-body">
-        <p>One fine body&hellip;</p>
+        <img src="/assets/wicked.png" alt="Wicked" class="programme-info-image">
+        <p>Rehearse and perform a mash from Wicked/Wizard of Oz in 5 days!</p>
+        <p>
+Monday, March 14 – Friday, March 18, 2016 <br>
+January 17- May 15<br>
+The Lower Ossington Theatre, 100 Ossington Ave.<br>
+Cost:  $500.00<br>
+Ages:  14-18 
+        </p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <div class="button">
+          <a href="https://tickets.ticketwise.ca/event/tyt-winter-spring-2016" target="_blank">Register Now</a>
+        </div>
       </div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
@@ -171,9 +198,9 @@
           <h3 class="m_3">Donate</h3>
             <div class="m_4"><span class="bottom_line"> </span></div>
           <div class="col-md-12">
-            <p class="m_10">The Toronto Youth Theatre is a registered charitable donation and is made possible through the generous donations of people like you. </p>
-            <p class="m_11">
-              <div class="button">
+            <p class="m_2">The Toronto Youth Theatre is a registered charitable donation and is made possible through the generous donations of people like you. </p>
+            <p class="m_11" style="text-align:center; padding-top:20px;">
+              <div class="button" style="text-align:center;">
                 <a href="https://www.canadahelps.org/en/charities/toronto-youth-theatre/" target="_blank">
                   Donate Now
                 </a>
@@ -196,10 +223,10 @@
                    <p>Phone: (416) 915-6747</p>
                    <p>Email: <a href="mailto:adeen.TYT@gmail.com"><span>adeen.TYT@gmail.com</span></a></p>
                   </div>
-                  <p class="m_13" style="padding-top:20px;">Adeen is the Artistic Director of the Toronto Youth Theatre. She has performed in numerous London West-End Musicals and she has regularly featured as a soloist on BBC Radio. Currently Adeen teaches voice at Sheridan College and performs in musicals at the Lower Ossington Theatre. </p>
+                  <p style="padding-top:20px;">Adeen is the Artistic Director of the Toronto Youth Theatre. She has performed in numerous London West-End Musicals and she has regularly featured as a soloist on BBC Radio. Currently Adeen teaches voice at Sheridan College and performs in musicals at the Lower Ossington Theatre. </p>
                </div>
               <div class="col-md-6 commentform">
-                <p class="comment-form-author">
+                <p class="comment-form-author" style="text-align:center;">
                   <a class="social-media facebook-link" href="https://www.facebook.com/TorontoYouthTheatre" target="_blank">
                     <i class="fa fa-facebook-official" aria-hidden="true"></i>
                   </a>
@@ -241,7 +268,7 @@
           $(window).on('scroll', function(){
             var st = $(this).scrollTop();
 
-            var limit = 500;
+            var limit = 550;
 
             if(st <= limit){
               $('#tyt-scene').show();
