--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,13 +1,18 @@
 <!--start header-->
 <div class="header">
 <img src="/assets/tyt-scene.jpg" id="tyt-scene" class="tyt-scene">
-<img src="/assets/tyt-lines.jpg" id="tyt-lines" class="tyt-scene" style="display:none;">
+<img src="/assets/tyt-lines.png" id="tyt-lines" class="tyt-scene" style="display:none;">
 <div class="header-top navbar-fixed-top">
   <div class="container">
       <div class="logo">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>                        
+        </button>
         <a href="index.html"><h1 style="font-family: Silver; color: #ffffff;">TYT</h1></a>
       </div>
-      <div class="menu">
+      <div class="menu navbar-collapse collapse">
         <a class="toggleMenu" href="#"><img src="assets/menu-white.png" alt="" /></a>
           <ul class="nav" id="nav">
              <li><a href="#mission" class="scroll">Our Mission</a></li>
@@ -223,7 +228,7 @@ Ages:  14-18
                    <p>Phone: (416) 915-6747</p>
                    <p>Email: <a href="mailto:adeen.TYT@gmail.com"><span>adeen.TYT@gmail.com</span></a></p>
                   </div>
-                  <p style="padding-top:20px;">Adeen is the Artistic Director of the Toronto Youth Theatre. She has performed in numerous London West-End Musicals and she has regularly featured as a soloist on BBC Radio. Currently Adeen teaches voice at Sheridan College and performs in musicals at the Lower Ossington Theatre. </p>
+                  <p style="padding-top:20px; color:#ffffff;">Adeen is the Artistic Director of the Toronto Youth Theatre. She has performed in numerous London West-End Musicals and she has regularly featured as a soloist on BBC Radio. Currently Adeen teaches voice at Sheridan College and performs in musicals at the Lower Ossington Theatre. </p>
                </div>
               <div class="col-md-6 commentform">
                 <p class="comment-form-author" style="text-align:center;">
